<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/logintop_roundbg">
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@android:drawable/edit_text"
        android:drawableLeft="@drawable/icon_user"
        android:drawablePadding="10dp"
        android:hint="@string/etName">
        <requestFocus/>
    </EditText>
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@id/etName"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@android:drawable/edit_text"
        android:drawableLeft="@drawable/icon_pass"
        android:drawablePadding="10dp"
        android:hint="@string/etPass">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_below="@id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="记住密码"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_select"
            android:textSize="20sp"
            android:onClick="login"
            android:text="@string/btnLogin"/>
    </LinearLayout>
</RelativeLayout>
