<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bzu.fshiner.parttimejob.activity.MainActivity">
    <RelativeLayout
        android:id="@+id/tab_title"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <TextView
            android:id="@+id/tv_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/text_black"
            android:text="@string/tv_top"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/text_black"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/tv_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:background="@drawable/tab_menu_bg"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tv_list"/>
        <TextView
            android:id="@+id/tv_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:background="@drawable/tab_menu_bg"
            android:textColor="@drawable/tab_menu_text"
            android:text="@string/tv_send"/>
        <TextView
            android:id="@+id/tv_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:background="@drawable/tab_menu_bg"
            android:textColor="@drawable/tab_menu_text"
            android:drawableTop="@drawable/tab_menu_personal"
            android:text="@string/tv_personal"/>
    </LinearLayout>
    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/tab_menu"/>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_title"
        android:layout_above="@id/tab_menu">

    </FrameLayout>

</RelativeLayout>
